# lumi

./: .coverage  .gitignore  CHANGELOG.md  README.en.md  README.md  pyproject.toml
deploy/: lumi.service  miloco-hermes-bridge.service
docs/: STATUS.md  configuration.md  frontend.md
lumi/: __init__.py  config.py  deps.py  lumi_tool.py  main.py  mcp_server.py  websocket.py
lumi/device_graph/: __init__.py  commands.py  fusion.py  policy.py  router.py  schema.py  service.py
lumi/ha/: __init__.py  client.py  events.py  router.py
lumi/hermes_bridge/: __init__.py
lumi/miloco/: __init__.py  client.py  fusion.py  router.py
lumi/reports/: daily.py  (+1 more)
miloco_bridge/: __init__.py  main.py
scripts/: doctor.sh  install.sh
tests/: conftest.py  integration_test.py  test_api_status.py  test_cameras.py  test_commands.py  test_config.py  test_daily_report.py  test_deps.py  test_device_aliases.py  test_fusion.py  test_ha_client.py  test_ha_client_extended.py  test_ha_events.py  test_ha_listener.py  test_ha_router.py  test_ha_sync_and_device_state.py  test_ha_trigger_and_auto_execute.py  test_hermes_bridge.py  test_hermes_send.py  test_image_url.py  test_incremental_refresh.py  test_lumi_tool.py  test_main.py  test_mcp_server.py  test_miloco_bridge.py  test_miloco_client.py  test_miloco_fusion.py  test_multicat.py  test_new_rules.py  test_perception.py  test_perception_history.py  test_perception_router.py  test_policy.py  test_proactive.py  test_proactive_router.py  test_proactive_ws.py  test_router.py  test_rules_loader_and_multicat.py  test_scenes.py  test_scenes_router.py  (+4 more)
(+14 files in other folders)
