[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumi"
version = "0.1.0"
description = "Lumi（露米）— 统一家庭智能体平台，融合 Miloco + Home Assistant + Hermes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff"]

[project.scripts]
lumi = "lumi.main:start_server"

[tool.hatch.build.targets.wheel]
packages = ["lumi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
